<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EZVisit</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_home">ActivityHome</string>
    <string name="title_activity_entrega__muestra">Entrega_Muestra</string>
    <string name="title_activity_operativo__medico">Operativo_Medico</string>
    <string name="title_activity_consulta__transaciones">Consulta_Transaciones</string>
    <string name="title_activity_asignacion__ruta">Asignacion_Ruta</string>
    <string name="title_activity_presupuesto">Presupuesto</string>
    <string name="title_activity_productos">productos</string>
    <string name="title_activity_registro__gastos">Reporte_Gastos</string>
    <string name="title_activity_carga__datos">Carga_Datos</string>

    <string name="txt_nombrecliente">Nombre del Cliente</string>
    <string name="txt_apellidocliente">Apellido del Cliente</string>
    <string name="txt_tipoCliente">Tipo de Cliente</string>
    <string name="txt_cliente">Cliente</string>
    <string name="txt_anadircliente">Añadir Cliente</string>
    <string name="txt_buscarCliente">Buscar Cliente</string>
    <string name="txt_registroCliente">Registro de Clientes</string>

    <string name="txt_anadirdir">Añadir direcciones</string>
    <string name="txt_anadircontacto">Añadir Contacto</string>

    <string name="txt_guardar">Guardar</string>
    <string name="txt_cancelar">Cancelar</string>

    <string name="txt_direcciones">Direcciones</string>
    <string name="txt_tipoDir">Tipo de Dirección</string>
    <string name="txt_direccion">Dirección</string>

    <string name="txt_contactos">Contactos</string>
    <string name="txt_tipoContacto">Tipo de Contacto</string>
    <string name="txt_contacto">Contacto</string>
    <string name="txt_tel">Teléfono</string>
    <string name="txt_mail">Correo</string>

    <string name="txt_programada">Visita Programada</string>
    <string name="txt_tipoVisita">Tipo de Visita</string>
    <string name="txt_estadoVisita">Estado de Visita</string>
    <string name="txt_anadirVisita">Nueva Visita</string>

    <string name="txt_entregamuestras">Entrega de Muestras</string>
    <string name="txt_objetivoprox">Objetivo Próxima Visita</string>
    <string name="txt_comentarios">Comentarios</string>

    <string name="txt_planTrabajo">Plan de Trabajo</string>
    <string name="title_activity_plan__trabajo">Plan de Trabajo</string>
    <string name="title_activity_registrar__clientes">Clientes</string>
    <string name="title_activity_registrar__visita">Registrar Visita</string>
    <string name="title_activity_seleccion__cliente">Clientes</string>
    <string name="title_activity_anadir_dir">Dirección</string>
    <string name="title_activity_anadir_contacto">Contactos</string>

    <string name="title_activity_recibir_muestras">Recibir Muestras</string>
    <string name="title_activity_cerrar_visita">Cerrar Visita</string>
    <string name="txt_lote">Lote: </string>
    <string name="txt_razonlote">Razón de aceptación/rechazo </string>
    <string name="txt_rechazarlote">Rechazar Lote</string>
    <string name="txt_aceptarlote">Aceptar Lote</string>
    <string name="title_activity_pantalla__entrega__muestra">Entrega Muestra</string>
    <string name="title_activity_inventario">Inventario</string>

    <string name="txt_Metricas">Métricas</string>





</resources>
