<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/innerTableClientes">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:id="@+id/spinTipoCliente"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_nombrecliente"
        android:id="@+id/textViewNombreCliente" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Nombre"
        android:ems="10"
        android:id="@+id/editNombre"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_apellidocliente"
        android:id="@+id/textViewApellidoCliente" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Apellido"
        android:ems="10"
        android:id="@+id/editApellido" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Direcciones"
        android:id="@+id/textView20" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="147dp"
        android:id="@+id/listViiewDir" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="AddDir"
        android:text="/\\"
        android:id="@+id/bAddDir" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_tipoDir"
        android:id="@+id/textView21" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinTipoDir"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_direccion"
        android:id="@+id/textView22" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="Dirección"
        android:ems="10"
        android:id="@+id/editDir" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_contactos"
        android:id="@+id/textView23" />


    <ListView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:id="@+id/listViewContactos"
        android:layout_weight="0.00" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="AddContacto"
        android:text="/\\"
        android:id="@+id/bAddContacto" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_tipoContacto"
        android:id="@+id/textView24" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinTipoContacto"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_tel"
        android:id="@+id/textViewTelefono" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editTel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_mail"
        android:id="@+id/textViewCorreo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editMail" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:id="@+id/spinEspec"
        android:spinnerMode="dropdown" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:id="@+id/spinClasificacion"
        android:spinnerMode="dropdown" />



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layoutSave"
        android:gravity="bottom">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_cancelar"
            android:onClick="CancelarCliente"
            android:id="@+id/bCancelar"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_guardar"
            android:onClick="SalvarCliente"
            android:id="@+id/bGuardar"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>

</ScrollView>