<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_tipoCliente"
        android:id="@+id/textView27" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinTipo"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_cliente"
        android:id="@+id/textView28" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_buscarCliente"
        android:id="@+id/textView34" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editBuscar"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Buscar"
            android:text="Buscar"
            android:id="@+id/btnBuscar" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:id="@+id/listClientes"
        android:layout_gravity="center_horizontal"
        android:choiceMode="singleChoice" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15dp"
        android:text="[Nombre y Apellido del Cliente]"
        android:id="@+id/labelCliente" />

    <CalendarView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="invisible"
        android:id="@+id/calendarView" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_programada"
        android:id="@+id/checkProgramada"
        android:checked="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout3"
        android:gravity="bottom">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_cancelar"
            android:onClick="CancelarVisita"
            android:id="@+id/bCancelar"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_guardar"
            android:onClick="SalvarVisita"
            android:id="@+id/bGuardar"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>