<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/innerTable">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:id="@+id/littleHor01">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="[Nombre]"
                android:id="@+id/labelNombre" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="[Apellido]"
                android:id="@+id/labelApellido" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="[Dirección]"
            android:id="@+id/labelDireccion" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="[Objetivo de Visita Anterior]"
            android:id="@+id/labelObjetivo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="[Comentario de Visita Anterior]"
            android:id="@+id/labelComentario" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txt_tipoVisita"
            android:id="@+id/textView29" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinTipoVisita"
            android:spinnerMode="dropdown" />

        <CalendarView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:id="@+id/calendarView2" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:id="@+id/LvProducto"
            android:choiceMode="singleChoice" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txt_estadoVisita"
            android:id="@+id/textView30" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinEstado"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txt_objetivoprox"
            android:id="@+id/textView31" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editObjetivos" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txt_comentarios"
            android:id="@+id/textView32" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editComentarios" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutSave">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_cancelar"
                android:id="@+id/bCancelar"
                android:layout_weight="1"
                android:onClick="Cancelar" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_guardar"
                android:id="@+id/bGuardar"
                android:layout_weight="1"
                android:onClick="Guardar" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>