<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="visit.ez.wyse.ezvisit.ActivityHome">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <ImageButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                android:id="@+id/bVisitas"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="GoPlanTrabajo"
                android:background="@null"
                android:src="@drawable/solicitudes_actualizacion"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_planTrabajo"
                android:id="@+id/textView16"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:textSize="40dp" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <ImageButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                android:text="New Button"
                android:id="@+id/bClientes"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="GoRegistroClientes"
                android:background="@null"
                android:src="@drawable/visitas"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_registroCliente"
                android:id="@+id/textView142"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:textSize="40dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <ImageButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:text="New Button"
                android:id="@+id/bMuestras"
                android:scaleType="fitCenter"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="GoMuestras"
                android:background="@null"
                android:src="@drawable/entrega"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_activity_recibir_muestras"
                android:id="@+id/textView143"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:textSize="40dp" />
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout6"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <ImageButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                android:text="New Button"
                android:id="@+id/bMetricas"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@null"
                android:src="@drawable/gastos"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_Metricas"
                android:id="@+id/textView146"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:textSize="40dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <ImageButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                android:text="New Button"
                android:id="@+id/bGastos"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@null"
                android:src="@drawable/operativos"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_activity_registro__gastos"
                android:id="@+id/textView147"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:textSize="40dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <ImageButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                android:text="New Button"
                android:id="@+id/bInventario"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="GoInventario"
                android:background="@null"
                android:src="@drawable/inventario"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_activity_inventario"
                android:id="@+id/textView144"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:textSize="40dp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
